# kalender

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.faboul.md  README.md  deploy.sh  index.html  tailwind.config.js  version.sh
cache/: update_cache.sh
css/: calendar.css
example_data/: faboul_2021.txt  faboul_2022.txt  faboul_2023.txt
js/: app.js  calendar-api.js  calendar-engine.js  calendar-ui.js  namedays.js  version.js
k8s/: calendar-api.yaml
src/: calendar.rs  error.rs  faboul.rs  main.rs  serde_util.rs
static/: main.css
templates/: calendar.html  main.html  top.html
test/: test-against-faboul.js  test-api.js  test-engine.js  test.html
