[package]
name = "kalender"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
axum = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
chrono = "0.4"
chrono-tz = "0.8.6"
clap = { version = "4.3", features = ["derive"] }
askama = "0.12"
tower-http = { version = "0.5", features = ["compression-br", "compression-gzip", "compression-deflate", "fs"] }
